# AXCGH-Engine

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README.md  benchmark_engine.py  deepcgh.py  docker-compose.yml  export_onnx.py  export_onnx_v2.py  test_engine.py  test_integration.py  train_1080p.py  train_512.py  train_natural_image.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
AXCGH-Engine-Pro/: README.md  pyproject.toml
AXCGH-Engine-Pro/axcgh_pro/: __init__.py  cloud_client.py  license.py  pro_engine.py
DeepCGHEngine/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
DeepCGHEngine/apps/: main.cpp
DeepCGHEngine/bindings/: pybind_module.cpp
DeepCGHEngine/cmake/: DeepCGHEngineConfig.cmake.in
DeepCGHEngine/deepcgh_engine/: __init__.py  cli.py  engine.py  gpu_engine.py  multi_wavelength.py  realtime.py  server.py  slm_driver.py  slm_hamamatsu.py  slm_holoeye.py  slm_manager.py  slm_meadowlark.py
DeepCGHEngine/include/deepcgh/: EngineAPI.h  InferenceCore.h  PreProcessor.h  Types.h
DeepCGHEngine/src/: EngineAPI.cpp  InferenceCore.cpp  PreProcessor.cpp
DeepCGHEngine/tools/: benchmark_gpu.py  optimize_tensorrt.py  quantize_model.py
cloud/: README.md  docker-compose.yml
cloud/server/: app.py  requirements.txt
docs/: _config.yml  api_reference.md  architecture.md  build.py  getting_started.md  index.md
docs/_layouts/: default.html
examples/: 01_basic_hologram.py  02_cpp_engine.py  03_rgb_wavelength.py  04_slm_display.py  05_realtime_preview.py  06_int8_quantization.py  07_batch_processing.py  08_custom_depth.py  README.md
