[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axcgh-engine-pro"
version = "1.0.0"
description = "AXCGH-Engine Pro — TensorRT accelerated holographic rendering with multi-GPU, streaming, and cloud API"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.8"
authors = [
    {name = "Lishoulan"},
]
keywords = ["holography", "deep-learning", "tensorrt", "multi-gpu", "cloud-api", "phase-map"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    "axcgh-engine>=1.0.0",
    "onnxruntime-gpu>=1.16",
    "numpy>=1.20",
    "requests>=2.28",
]

[project.optional-dependencies]
tensorrt = ["tensorrt>=8.6"]
cupy = ["cupy-cuda12x"]
dev = ["pytest", "black", "mypy"]

[tool.setuptools.packages.find]
include = ["axcgh_pro*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
